sdk/ionic-legacy/2.0/calling-default-calling.mdx
---
title: "Default Calling"
description: "Default Calling — CometChat documentation."
---

<Warning>
**Deprecated:** The Ionic Cordova SDK is deprecated. For new Ionic/Cordova applications, please use the [JavaScript SDK](/sdk/javascript/overview) which provides full compatibility with Ionic applications.
</Warning>



This section will provide information on how a complete calling workflow can be set up using CometChat. We've built the complete workflow to help your users make calls, receive calls as well as accept/reject calls.

Let us assume Alex to be the call initiator and Bob is the receiver.

1. Alex initiates the call to Bob using the **initiateCall()** method.

2. Bob now has two choices:

   1. Accept the call from Alex using the **acceptCall()** method.
   2. Reject the call from Alex using the **rejectCall()** method passing the status as `rejected`.

3. In the meantime, Alex has the option to cancel the call he initiated to Bob using the **rejectCall()** method passing the status as `cancelled`.

4. If Bob accepts the call from Alex, both Alex and Bob need to call the **startCall()** method. Alex in the **onOutgoingCallAccepted()** method of the `CallListener` and Bob in the success obtained from the `**acceptCall()**` method and both will be connected to each other.

## Initiate Call

The `initiateCall()` method sends a call request to a user or a group.

<Tabs>
<Tab title="User Call">
```javascript
var receiverID = "UID";
var callType = CometChat.CALL_TYPE.VIDEO;
var receiverType = CometChat.RECEIVER_TYPE.USER;

var call = new CometChat.Call(receiverID, callType, receiverType);

CometChat.initiateCall(call).then(
  (outGoingCall) => {
    console.log("Call initiated successfully:", outGoingCall);
    // perform action on success. Like show your calling screen.
  },
  (error) => {
    console.log("Call initialization failed with exception:", error);
  }
);
```

</Tab>

<Tab title="Group Call">
```javascript
var receiverID = "GUID";
var callType = CometChat.CALL_TYPE.VIDEO;
var receiverType = CometChat.RECEIVER_TYPE.GROUP;

var call = new CometChat.Call(receiverID, callType, receiverType);

CometChat.initiateCall(call).then(
  (outGoingCall) => {
    console.log("Call initiated successfully:", outGoingCall);
    // perform action on success. Like show your calling screen.
  },
  (error) => {
    console.log("Call initialization failed with exception:", error);
  }
);
```

</Tab>

</Tabs>

This method takes an object of the `Call` class. The constructor for `Call` class takes the following parameters:

| Parameter      | Description                                                                                  |
| -------------- | -------------------------------------------------------------------------------------------- |
| `receiverID`   | The `UID` or `GUID` of the recipient                                                         |
| `receiverType` | The type of the receiver. 1.`CometChat.RECEIVER_TYPE.USER` 2.`CometChat.RECEIVER_TYPE.GROUP` |
| `callType`     | The type of call. 1.`CometChat.CALL_TYPE.AUDIO` 2.`CometChat.CALL_TYPE.VIDEO`                |

On successful initialization, a `Call` object is returned with the details of the call including a unique session ID for the call.

## Receive Calls

Wherever you wish to receive the call events in, you need to register the `CallListener` listener using the `addCallListener()` method.

<Tabs>
<Tab title="JavaScript">
```js
var listnerID = "UNIQUE_LISTENER_ID";
CometChat.addCallListener(
  listnerID,
  new CometChat.CallListener({
    onIncomingCallReceived: (call) => {
      console.log("Incoming call:", call);
      // Handle incoming call
    },
    onOutgoingCallAccepted: (call) => {
      console.log("Outgoing call accepted:", call);
      // Outgoing Call Accepted
    },
    onOutgoingCallRejected: (call) => {
      console.log("Outgoing call rejected:", call);
      // Outgoing Call Rejected
    },
    onIncomingCallCancelled: (call) => {
      console.log("Incoming call calcelled:", call);
    },
  })
);
```

</Tab>

</Tabs>

| Parametrer   | Description                                                                                    |
| ------------ | ---------------------------------------------------------------------------------------------- |
| `listenerID` | An ID that uniquely identifies that listener. We recommend using the activity or fragment name |

We recommend you remove the listener once the activity or fragment is not in use.

<Tabs>
<Tab title="JavaScript">
```js
var listenerID = "UNIQUE_LISTENER_ID";

CometChat.removeCallListener(listenerID);
```

</Tab>

</Tabs>

As mentioned in the [Overview](/sdk/ionic-legacy/2.0/calling-default-calling) section, Once the call is initiated, there are three options that can be possible:

1. The receiver of the call accepts the call.
2. The receiver of the call rejects the call.
3. The initiator of the call cancels the call.

Please find below how these three scenarios can be implemented:

### Accept the Incoming Call

Once you have received an incoming call from a user or in any group, to accept the call using the `acceptCall()` method.

<Tabs>
<Tab title="JavaScript">
```js
var sessionID = "SESSION_ID";

CometChat.acceptCall(sessionID).then(
  (call) => {
    console.log("Call accepted successfully:", call);
    // start the call using the startCall() method
  },
  (error) => {
    console.log("Call acceptance failed with error", error);
    // handle exception
  }
);
```

</Tab>

</Tabs>

| Parameter   | Description                                          |
| ----------- | ---------------------------------------------------- |
| `sessionID` | The unique session ID available in the `Call` object |

### Reject the Incoming Call

To reject the incoming call once it is received using the `rejectCall()` method.

<Tabs>
<Tab title="JavaScript">
```js
var sessionID = "SESSION_ID";
var status = CometChat.CALL_STATUS.REJECTED;

CometChat.rejectCall(sessionID, status).then(
  (call) => {
    console.log("Call rejected successfully", call);
  },
  (error) => {
    console.log("Call rejection failed with error:", error);
  }
);
```

</Tab>

</Tabs>

| Parameter   | Description                                          |
| ----------- | ---------------------------------------------------- |
| `sessionID` | The unique session ID available in the `Call` object |
| `status`    | Reason for rejection of the call                     |

Here the status needs to be set as `CometChat.CALL_STATUS.REJECTED` as the call is being rejected by the receiver of the call.

### Cancel the Outgoing Call

In the case where the initiator wishes to cancel the call, use the same above `rejectCall()` method and just pass the status to the `rejectCall()` method as `CometChat.CALL_STATUS.CANCELLED`

## Start a Call

Once the call request is sent and the receiver has accepted the call, both the initiator and the receiver need to call the `startCall()` method.

You need to call this method for two scenarios:

1. After you accept an incoming call i.e. in the `onSuccess()` callback of the `acceptCall()` method.
2. After the recipient accepts an outgoing call i.e. in the `onOutgoingCallAccepted()` callback of the `CallListener` listener.

<Tabs>
<Tab title="JavaScript">
```js
/**
 * You can get the call Object from the success of acceptCall() or from the onOutgoingCallAccepted() callback of the CallListener.
 */
var sessionId = call.sessionId;
var callType = call.type;
let callListener = new CometChat.OngoingCallListener({
  onUserJoined: (user) => {
    console.log("User joined call:", user);
  },
  onUserLeft: (user) => {
    console.log("User left call:", user);
  },
  onUserListUpdated: (userList) => {
    console.log("user list:", userList);
  },
  onCallEnded: (call) => {
    console.log("Call ended listener", call);
  },
  onAudioModesUpdated: (audioModes) => {
    console.log("audio modes:", audioModes);
  },
});
var callSettings = new CometChat.CallSettingsBuilder()
  .setSessionID(sessionId)
  .enableDefaultLayout(true)
  .setIsAudioOnlyCall(callType == "audio" ? true : false)
  .setCallEventListener(callListener)
  .build();
CometChat.startCall(callSettings);
```

</Tab>

</Tabs>

| Parameter      | Description                   |
| -------------- | ----------------------------- |
| `callSettings` | Object of CallSettings class. |

The `OngoingCallListener` listener provides you with the below callback methods:

| Callback Method                   | Description                                                                                                                  |
| --------------------------------- | ---------------------------------------------------------------------------------------------------------------------------- |
| `onUserJoined(User user)`         | This method is called when any other user joins the call. The user details can be obtained from the `User` object provided.  |
| `onUserLeft(User user)`           | This method is called when a user leaves the call. The details of the user can be obtained from the provided `User` object.  |
| `onCallEnded()`                   | This method is called when the call is successfully ended. The call details can be obtained from the `Call` object provided. |
| `onUserListUpdated(userList)`     | This method is triggered every time a participant joins or leaves the call providing the list of users active in the call.   |
| `onAudioModesUpdated(audioModes)` | This callback is triggered if any new audio output source is available or becomes unavailable.                               |

## Settings

The `CallSettings` class is the most important class when it comes to the implementation of the Calling feature. This is the class that allows you to customize the overall calling experience. The properties for the call/conference can be set using the `CallSettingsBuilder` class. This will eventually give you an object of the `CallSettings` class which you can pass to the `startCall()` method to start the call.

The **mandatory** parameters that are required to be present for any call/conference to work are:

1. sessionId - The unique session Id for the call/conference session.

The options available for customization of calls are:

| Setting                                                   | Description                                                                                                                                                                                                                                                                                                 |
| --------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `enableDefaultLayout(defaultLayout: boolean)`             | If set to `true` enables the default layout for handling the call operations. <br/>If set to `false` it hides the button layout and just displays the Call View. <br/>**Default value = true**                                                                                                                        |
| `showEndCallButton(showEndCallButton: boolean)`           | If set to `true` it displays the EndCallButton in Button Layout. <br/>if set to `false` it hides the EndCallButton in Button Layout. <br/>**Default value = true**                                                                                                                                                    |
| `showPauseVideoButton(showPauseVideoButton: boolean)`     | If set to `true` it displays the PauseVideoButton in Button Layout. <br/>if set to `false` it hides the PauseVideoButton in Button Layout. <br/>**Default value = true**                                                                                                                                              |
| `showMuteAudioButton(showMuteAudioButton: boolean)`       | If set to `true` it displays the MuteAudioButton in Button Layout. <br/>if set to `false` it hides the MuteAudioButton in Button Layout. <br/>**Default value = true**                                                                                                                                                |
| `showSwitchCameraButton(showSwitchCameraButton: boolean)` | If set to `true` it displays the SwitchCameraButton in Button Layout. <br/>if set to `false` it hides the SwitchCameraButton in Button Layout. <br/>**Default value = true**                                                                                                                                          |
| `showAudioModeButton(showAudioModeButton: boolean)`       | If set to `true` it displays the AudioModeButton in Button Layout. <br/>if set to `false` it hides the AudioModeButton in Button Layout. <br/>**Default value = true**                                                                                                                                                |
| `setIsAudioOnlyCall(audioOnly: boolean)`                  | If set to true, the call will be strictly an audio call. <br/>If ser to false, the call will be an audio-video call. <br/>**Default value = false**                                                                                                                                                                   |
| `setMode(mode: string)`                                   | CometChat provides 3 options for the calling UI. <br/>1. CometChat.CALL\_MODE.DEFAULT <br/>2. CometChat.CALL\_MODE.SPOTLIGHT <br/>3. CometChat.CALL\_MODE.SINGLE <br/>**Default value = CometChat.CALL\_MODE.DEFAULT**                                                                                                          |
| `startWithAudioMuted(audioMuted: boolean)`                | This ensures the call is started with the audio muted if set to true. <br/>**Default value = false**                                                                                                                                                                                                             |
| `startWithVideoMuted(videoMuted: boolean)`                | This ensures the call is started with the video paused if set to true. <br/>**Default value = false**                                                                                                                                                                                                            |
| `setDefaultAudioMode(audioMode: string)`                  | This method can be used if you wish to start the call with a specific audio mode. The available options are <br/>1. CometChat.AUDIO\_MODE.SPEAKER = "SPEAKER" <br/>2. CometChat.AUDIO\_MODE.EARPIECE = "EARPIECE" <br/>3. CometChat.AUDIO\_MODE.BLUETOOTH = "BLUETOOTH" <br/>4. CometChat.AUDIO\_MODE.HEADPHONES = "HEADPHONES" |

## Active Call

CometChat provides a method to get the details of the call that is currently active. The `CometChat.getActiveCall()` will return an object of the `Call` class containing the details of the ongoing call. If there is no ongoing call this method will return null.

<Tabs>
<Tab title="JavaScript">
```js
let activeCall = CometChat.getActiveCall();
```

</Tab>

</Tabs>

<Note>

The `getActiveCall()` method will only return the details of the active call for the ongoing session in which the call has been started. If the app is restarted, the data will be lost.

</Note>

## Call Participant Count

In order to get the number of participants in any call, you can use the `getCallParticipantCount()` method. This method takes the session id for the call and returns the number of participants that are active in the call.

<Tabs>
<Tab title="JavaScript">
```js
let sessionId = "CALL_SESSION_ID";
let callType = "DEFAULT";

CometChat.getCallParticipantCount(sessionId, callType).then(
  (count) => {
    console.log("Participants count =", count);
  },
  (error) => {
    console.log("Some error occurred =", error);
  }
);
```

</Tab>

</Tabs>
